fixing home page

--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -1,6 +1,4 @@
-<link rel="stylesheet" href="home.component.scss">
-
-<main role="main">
+<!--<main role="main">-->
   <div class="carousel">
     <div>
       <p-carousel [value]="CarouselImages" [circular]="true" [autoplayInterval]="5000"
@@ -135,7 +133,7 @@
       </div>
     </div>
   </div>
-</main>
+<!--</main>-->
 
 <footer class="container">
   <p>
