--- a/UI/src/app/pages/home/home.component.scss
+++ b/UI/src/app/pages/home/home.component.scss
@@ -29,9 +29,10 @@
 
 .carousel-img {
   min-width: 100%;
+  min-height: 100%;
   margin-bottom: 0.5rem;
-  max-width:100%;
-  max-height:100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .textbox>h3 {
