--- a/UI/src/app/pages/about/about.component.scss
+++ b/UI/src/app/pages/about/about.component.scss
@@ -1,5 +1,5 @@
 //@import "~bootstrap/dist/css/bootstrap.css";
-@import "src/style.variables";
+@import "src/styles";
 
 .align-middle {
     width: 10%;
