--- a/UI/src/style.variables.scss
+++ b/UI/src/style.variables.scss
@@ -1,2 +1,5 @@
 $base-color: #00AAE3;
 $base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$button-base-color: #4760E5;
+$button-hover-color: #213FE0;
+$edit-name-button-backgroud-color: #EFEFEF;
