--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -114,3 +114,30 @@ h2 {
   font-weight: 700 !important;
 }
 
+.btn-primary {
+  color: #fff;
+  background-color: $button-base-color;
+  border-color: $button-base-color;
+  margin: 0.12rem;
+}
+
+.btn-primary:disabled {
+  opacity: 0.5;
+  color: #fff;
+  background-color: $button-base-color;
+  border-color: $button-base-color;
+}
+
+.btn-primary:not(:disabled):not(.disabled):hover, .btn-primary:not(:disabled):not(.disabled):active {
+  color: #fff;
+  background-color: $button-hover-color;
+  border-color: $button-hover-color;
+}
+
+.btn-primary.focus, .btn-primary:focus, .btn-primary:not(:disabled):not(.disabled):active:focus {
+  box-shadow: 0 0 0 .2rem rgba(33, 63, 224, .5);
+}
+
+.btn-action {
+  width: 2.4em;
+}
