New UI results plots titles (#207)
* dataset serializer printing commented

* datasets pairs and triples added to the get_metric_names_and_associated_files method response

* datasets attribute added

* get back to overview_files name

* get back to overview_files name

* labels with datasets pairs or triples added to plots

* scaling when hovering changed

--- a/UI/src/app/modules/validation-result/components/result-files/result-files.component.scss
+++ b/UI/src/app/modules/validation-result/components/result-files/result-files.component.scss
@@ -1,8 +1,5 @@
-.pcol6:hover{
-  transform: scale(2);
-}
 .pcol:hover{
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 .result-plot{
   border-color: #dddddd;
@@ -15,5 +12,11 @@
   cursor: pointer;
 }
 .center{
+  text-align: center;
+}
+.image-label{
+  font-size: 0.7rem;
+}
+.image-container{
   text-align: center;
 }
