panel header padding changed

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -3833,7 +3833,7 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
 
 .p-panel .p-panel-header {
   border: 1px solid #dee2e6;
-  padding: 1rem 1.25rem;
+  padding: 0 1.25rem;
   background: $base-color;
   color: #ffffff;
   border-top-right-radius: 4px;
