icon for editing name set to font awesome; global styling loaded instead of bootstrap and buttons component

--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -65,7 +65,8 @@
           [ngClass]="{'btn btn-sm btn-primary btn-action edit_name_btn': true, 'hidden': !hideElement}"
           title="Change Name"
           (click)="toggleEditing()">
-          <span class="pi pi-pencil"></span>
+          <fa-icon [icon]="faIcons.faPencil"></fa-icon>
+<!--          <span class="pi pi-pencil"></span>-->
         </button>
         <span *ngIf="!hideElement">
           <label for="new-name"></label>
