--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.scss
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.scss
@@ -1,5 +1,4 @@
-@import "~bootstrap/dist/css/bootstrap.css";
-@import "../buttons/buttons.component.scss";
+@import "src/styles";
 .expiry-icons{
   font-size: 1.5rem;
   padding: 5px;
@@ -7,5 +6,6 @@
 .status{
   max-width: 8rem;
 }
+
 
 
