some text styling added

--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.scss
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.scss
@@ -7,5 +7,16 @@
   max-width: 8rem;
 }
 
+h5 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  margin: 0;
+}
 
+*{
+  line-height: 1.5rem;
+}
+input{
+  font-size: 1rem;
+}
 
