--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -3833,12 +3833,12 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
 
 .p-panel .p-panel-header {
   border: 1px solid #dee2e6;
-  padding: 0 1.25rem;
+  padding: $panel-header-padding;
   background: $base-color;
   color: #ffffff;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
-  height: 3rem;
+  height: 3.2rem;
   font-size: 1.4rem;
 
 }
@@ -6027,3 +6027,19 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
 }
 
 /* Customizations to the designer theme should be defined here */
+
+.validation-row .p-panel .p-panel-header{
+  font-size: 1.5rem;
+  text-align: right;
+}
+
+.validation-row .p-panel .p-panel-content {
+  padding: 0.5rem 1.25rem;
+  border: 1px solid #dee2e6;
+  background: #ffffff;
+  color: #212529;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-top: 0 none;
+}
+
