font color changed on the dropdown with action buttons

--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.scss
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.scss
@@ -21,6 +21,7 @@
   display: none;
   position: absolute;
   background-color: #f1f1f1;
+  color: #495057;
   min-width: 160px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   z-index: 1;
@@ -42,4 +43,5 @@
 a.no-decorations {
   text-decoration: none;
 }
+
 
