--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -2,16 +2,21 @@
 <div *ngIf="validationList" class="col-sm" style="text-align: right; max-width: 25rem">
 <!--  this one will be shown on custom validation page only due to given conditions-->
   <button *ngIf="validationRun.progress > -1 && validationRun.progress < 100 && validationRun.end_time === null"
-          class="btn btn-sm btn-primary btn-action"
+          pButton
+          type="button"
+          icon="faIcons.faStop"
+          class="btn-action"
           title="Cancel validation"
           (click)="stopValidation(validationRun.id)">
     <span><fa-icon [icon]="faIcons.faStop"></fa-icon></span>
   </button>
 <!--  both pages -->
-  <a class="btn btn-sm btn-primary btn-action"
+  <a class="btn-action"
+     pButton
+     type="button"
+     icon="pi pi-folder-open"
      routerLink="/validation-result/{{validationRun.id}}"
      title="View results">
-    <span class="pi pi-folder-open"></span>
   </a>
 
 <!--custom validations only-->
@@ -19,15 +24,20 @@
         [ngClass]="{'patchButtonGroup': true,  'collapse': validationRun.publishing_in_progress}">
 
     <button *ngIf="validationRun.is_archived"
-            class="btn btn-sm btn-primary btn-action"
+            pButton
+            type="button"
+            icon="pi pi-calendar"
             title="Un-archive"
+            class="btn-action"
             (click)="archiveResults(validationRun.id, false)">
-      <span class="pi pi-calendar"></span>
     </button>
 
     <button *ngIf="!validationRun.is_archived"
-            class="btn btn-sm btn-primary btn-action"
+            pButton
+            type="button"
+            icon="faIcons.faArchive"
             title="Archive"
+            class="btn-action"
             (click)="archiveResults(validationRun.id, true)">
       <span><fa-icon [icon]="faIcons.faArchive"></fa-icon></span>
     </button>
@@ -79,45 +89,59 @@
   </div>
 <!--published validations page only-->
   <span *ngIf="published">
-    <a class="btn btn-sm btn-primary btn-action"
+    <a class="btn-action"
+       pButton
+       type="button"
+       icon="faIcons.faRedo"
        routerLink="/validate/"
        [queryParams]="{valrun_uuid: validationRun.id}"
        title="Load validation settings">
       <span><fa-icon [icon]="faIcons.faRedo"></fa-icon></span>
     </a>
     <button *ngIf="isCurrentUser && isTrackedByTheUser"
-            class="btn btn-sm btn-primary btn-action"
+            pButton
+            type="button"
+            icon="pi pi-times"
+            class="btn-action"
             title="Remove this validation from your list"
             (click)="removeValidation(validationRun.id)">
-        <span class="pi pi-times"></span>
     </button>
     <button *ngIf="isCurrentUser && !isTrackedByTheUser"
-            class="btn btn-sm btn-primary btn-action"
+            pButton
+            type="button"
+            icon="pi pi-plus"
+            class="btn-action"
             title="Track this validation"
             (click)="addValidation(validationRun.id)"
             onclick="">
-        <span class="pi pi-plus"></span>
     </button>
   </span>
 
 
 <!--  tracked validations on custom validations page-->
   <span *ngIf="validationRun.output_file && tracked">
-    <button class="btn btn-sm btn-primary btn-action"
+    <button pButton
+            type="button"
+            icon="pi pi-download"
+            class="btn-action"
             (click)="downloadResultFile(validationRun.id, 'graphics',validationRun.id + '_graphs.zip')"
             title="Download graphs .zip">
-      <span class="pi pi-download"></span>
     </button>
-    <button class="btn btn-sm btn-primary btn-action"
+    <button pButton
+            type="button"
+            icon="faIcons.faFileDownload"
+            class="btn-action"
             (click)="downloadResultFile(validationRun.id, 'netCDF', validationRun.output_file_name)"
             title="Download validation run .nc file">
       <span><fa-icon [icon]="faIcons.faFileDownload"></fa-icon></span>
     </button>
     <button *ngIf="isCurrentUser"
-            class="btn btn-sm btn-primary btn-action"
+            pButton
+            type="button"
+            icon="pi pi-times"
+            class="btn-action"
             title="Remove this validation from your list"
             (click)="removeValidation(validationRun.id)">
-        <span class="pi pi-times"></span>
     </button>
   </span>
 
@@ -127,46 +151,65 @@
 <div *ngIf="!validationList" class="col-sm" style="text-align: right;">
   <div *ngIf="isOwner && validationRun.is_unpublished; else elseSingleValidation" style="float: right"
        [ngClass]="{'patchButtonGroup': true,  'collapse': validationRun.publishing_in_progress}">
-    <button class="btn btn-sm btn-primary"
+    <button pButton
+            type="button"
+            icon="pi pi-times"
+            class="btn-action-large"
             title="Remove result"
+            label="Delete"
             (click)="deleteValidation(validationRun.id)">
-      <span class="pi pi-times"></span> Delete
     </button>
 
     <button *ngIf="validationRun.is_archived; else elseIsArchived"
-            class="btn btn-sm btn-primary"
+            pButton
+            type="button"
+            icon="pi pi-calendar"
+            class="btn-action-large"
+            label="Un-archive"
             title="Un-archive"
             (click)="archiveResults(validationRun.id, false)">
-      <span class="pi pi-calendar"></span> Un-archive
     </button>
 
     <ng-template #elseIsArchived>
-      <button class="btn btn-sm btn-primary"
+      <button pButton
+              type="button"
+              icon="pi pi-calendar-plus"
+              class="btn-action-large"
+              label="Renew"
               title="Extend lifespan"
               (click)="extendResults(validationRun.id)">
-        <span class="pi pi-calendar-plus"></span> Renew
       </button>
-      <button class="btn btn-sm btn-primary"
+      <button pButton
+              type="button"
+              icon="faIcons.faArchive"
+              class="btn-action-large"
+              label="Archive"
               title="Archive"
               (click)="archiveResults(validationRun.id, true)">
-        <span><fa-icon [icon]="faIcons.faArchive"></fa-icon></span> Archive
+        <span><fa-icon [icon]="faIcons.faArchive"></fa-icon></span>
       </button>
     </ng-template>
 
     <button *ngIf="validationRun.output_file"
+            pButton
             type="button"
+            icon="pi pi-book"
+            class="btn-action-large"
+            label="Publish"
             title="Publish on Zenodo"
-            class="btn btn-sm btn-primary"
             data-toggle="modal"
             data-target="#publishDialog">
-      <span class="pi pi-book"></span> Publish
     </button>
 
-    <a class="btn btn-sm btn-primary"
+    <a pButton
+       type="button"
+       icon="faIcons.faRedo"
+       class="btn-action-large"
+       label="Load settings"
        routerLink="/validate/"
        [queryParams]="{valrun_uuid: validationRun.id}"
        title="Load settings">
-      <span> <fa-icon [icon]="faIcons.faRedo"></fa-icon></span> Load settings</a>
+      <span> <fa-icon [icon]="faIcons.faRedo"></fa-icon></span></a>
 
     <div [ngClass]="{'patchButtonGroup': true,  'collapse': !validationRun.publishing_in_progress}"
          style="float: right">
@@ -181,24 +224,35 @@
 
   <ng-template #elseSingleValidation>
     <div style="float: right;" class="patchButtonGroup">
-      <a class="btn btn-sm btn-primary"
+      <a pButton
+         type="button"
+         icon="faIcons.faRedo"
+         class="btn-action-large"
+         label="Load settings"
          routerLink="/validate/"
          [queryParams]="{valrun_uuid: validationRun.id}"
          title="Load settings">
-        <span><fa-icon [icon]="faIcons.faRedo"></fa-icon></span> Load settings
+        <span> <fa-icon [icon]="faIcons.faRedo"></fa-icon></span>
       </a>
 
       <button *ngIf="isCurrentUser && isTrackedByTheUser"
-              class="btn btn-sm btn-primary"
+              pButton
+              type="button"
+              icon="pi pi-times"
+              class="btn-action-large"
+              label="Untrack"
               title="Remove this validation from your list"
               (click)="removeValidation(validationRun.id)">
-        <span class="pi pi-times"></span> Untrack
       </button>
 
-      <button *ngIf="isCurrentUser && !isTrackedByTheUser" class="btn btn-sm btn-primary"
+      <button *ngIf="isCurrentUser && !isTrackedByTheUser"
+              class="btn-action-large"
+              pButton
+              type="button"
+              icon="pi pi-plus"
+              label="Track"
               title="Track this validation"
               (click)="addValidation(validationRun.id)">
-        <span class="pi pi-plus"></span> Track
       </button>
 
     </div>
