--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -123,87 +123,6 @@ h4, .h4 {
   font-weight: 700 !important;
 }
 
-.btn {
-  display: inline-block;
-  font-weight: 400;
-  color: #212529;
-  text-align: center;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-color: transparent;
-  border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-@media (prefers-reduced-motion: reduce) {
-  .btn {
-    transition: none;
-  }
-}
-
-.btn:hover {
-  color: #212529;
-  text-decoration: none;
-}
-
-.btn:focus, .btn.focus {
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-}
-
-.btn.disabled, .btn:disabled {
-  opacity: 0.65;
-}
-
-.btn:not(:disabled):not(.disabled) {
-  cursor: pointer;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: $button-base-color;
-  border-color: $button-base-color;
-  margin: 0.12rem;
-}
-
-.btn-primary:disabled {
-  opacity: 0.5;
-  color: #fff;
-  background-color: $button-base-color;
-  border-color: $button-base-color;
-}
-
-.btn-primary:not(:disabled):not(.disabled):hover, .btn-primary:not(:disabled):not(.disabled):active {
-  color: #fff;
-  background-color: $button-hover-color;
-  border-color: $button-hover-color;
-}
-
-.btn-primary.focus, .btn-primary:focus, .btn-primary:not(:disabled):not(.disabled):active:focus {
-  box-shadow: 0 0 0 .2rem rgba(33, 63, 224, .5);
-}
-
-.btn-action {
-  width: 2rem;
-  margin-top: 0.12rem;
-  margin-bottom: 0.12rem;
-}
-
-.btn-lg, .btn-group-lg > .btn {
-  padding: 0.5rem 0.5rem;
-  font-size: 1.25rem;
-  line-height: 1.5;
-  border-radius: 0.3rem;
-  text-align: center;
-}
-
 .btn-primary.edit_name_btn{
   color: #ffffff;
   background-color: $edit-name-button-backgroud-color;
@@ -228,21 +147,21 @@ h4, .h4 {
   width: 1.3rem;
 }
 
-.btn-sm, .btn-group-sm > .btn {
-  padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
-  line-height: 1.5;
-  border-radius: 0.2rem;
-  align-content: center;
-}
+//.btn-sm, .btn-group-sm > .btn {
+//  padding: 0.25rem 0.5rem;
+//  font-size: 0.875rem;
+//  line-height: 1.5;
+//  border-radius: 0.2rem;
+//  align-content: center;
+//}
 
 
-.btn-primary.save_name_btn:not(.disabled):hover, .btn-primary.cancel_editing_btn:not(.disabled):hover{
-  color: #4760E5;
-  background-color: $base-color;
-  border-color: $base-color;
-  transform: scale(1.2);
-}
+//.btn-primary.save_name_btn:not(.disabled):hover, .btn-primary.cancel_editing_btn:not(.disabled):hover{
+//  color: #4760E5;
+//  background-color: $base-color;
+//  border-color: $base-color;
+//  transform: scale(1.2);
+//}
 
 //.btn-primary.save_name_btn.result_page:not(.disabled):hover, .btn-primary.cancel_editing_btn.result_page:not(.disabled):hover{
 //  transform: scale(1.7);
