--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -5,13 +5,13 @@
     <h5 class="p-my-0"><span class="font-weight-normal">Name:</span> {{ validationRun.name_tag }}</h5>
   </ng-template>
   <ng-template *ngIf="published" pTemplate="icons" class="doilink">
-    <h5 class="my-0"> DOI: <a class="doilink" target="_blank"
+    <h5 class="p-my-0"> DOI: <a class="doilink" target="_blank"
                               href="{{this.getDoiPrefix()}}{{ validationRun.doi }}">{{ validationRun.doi }}</a>
     </h5>
   </ng-template>
   <!--  CUSTOM    -->
   <ng-template *ngIf="!published" pTemplate="header">
-    <h5 class="my-0">
+    <h5 class="p-my-0">
       <!--      if there is expiry date property: -->
       <span *ngIf="validationRun.expiry_date">
           <span *ngIf="validationRun.is_near_expiry" class="p-panel-header-icon pi pi-exclamation-triangle expiry-icons"
@@ -49,13 +49,13 @@
     </h5>
   </ng-template>
   <ng-template *ngIf="!published" pTemplate="icons" style="min-width: 7rem">
-    <h5 class="my-0">
+    <h5 class="p-my-0">
       <span *ngIf="hideElement"
             class=" font-weight-normal">
         Name: {{ validationRun.name_tag }}
       </span>
       <span *ngIf="!validationRun.is_unpublished; else elseUnpublished"
-            class="my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
+            class="p-my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
         <span class="no_name_change_info pi pi-question-circle help-icon"
               title="Validation has been published. There is no possibility of changing its name.">
         </span>
@@ -100,7 +100,7 @@
 
   <!-- Body -->
   <!-- Datasets -->
-  <div class="p-grid mx-0 px-0 my-0">
+  <div class="p-grid p-mx-0 p-px-0 p-my-0">
     <div class="p-col">
       <strong>Data:</strong><br/>
       <span *ngFor="let config of configurations">
