--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -21,7 +21,7 @@
 
 <!--custom validations only-->
   <span *ngIf="validationRun.end_time && validationRun.is_unpublished && isOwner"
-        [ngClass]="{'patchButtonGroup': true,  'collapse': validationRun.publishing_in_progress}">
+        [ngClass]="{'collapse': validationRun.publishing_in_progress}">
 
     <button *ngIf="validationRun.is_archived"
             pButton
@@ -71,7 +71,7 @@
       </div>
 
       <span *ngIf="validationRun.is_unpublished"
-            [ngClass]="{'patchButtonGroup': true,  'collapse': validationRun.publishing_in_progress}">
+            [ngClass]="{'collapse': validationRun.publishing_in_progress}">
         <button class="dropdown-item"
                 title="Remove this validation run"
                 (click)=deleteValidation(validationRun.id)>
@@ -150,7 +150,7 @@
 <!--Buttons shown on the single validation page (both custom and published)-->
 <div *ngIf="!validationList" class="col-sm" style="text-align: right;">
   <div *ngIf="isOwner && validationRun.is_unpublished; else elseSingleValidation" style="float: right"
-       [ngClass]="{'patchButtonGroup': true,  'collapse': validationRun.publishing_in_progress}">
+       [ngClass]="{'collapse': validationRun.publishing_in_progress}">
     <button pButton
             type="button"
             icon="pi pi-times"
@@ -211,7 +211,7 @@
        title="Load settings">
       <span> <fa-icon [icon]="faIcons.faRedo"></fa-icon></span></a>
 
-    <div [ngClass]="{'patchButtonGroup': true,  'collapse': !validationRun.publishing_in_progress}"
+    <div [ngClass]="{'collapse': !validationRun.publishing_in_progress}"
          style="float: right">
       <div class="spinner-border spinner-border-sm" role="status">
         <span class="sr-only">Publishing in progress...</span>
@@ -223,7 +223,7 @@
 
 
   <ng-template #elseSingleValidation>
-    <div style="float: right;" class="patchButtonGroup">
+    <div style="float: right;">
       <a pButton
          type="button"
          icon="faIcons.faRedo"
@@ -258,26 +258,3 @@
     </div>
   </ng-template>
 </div>
-
-<!--        {% if is_owner and valrun.is_unpublished %}-->
-<!--        <div style="float: right;" class="patchButtonGroup{% if valrun.publishing_in_progress %} collapse {% endif %}">-->
-<!--          <button class="btn btn-sm btn-primary" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}', true)"><span class="fas fa-times"></span> Remove</button>-->
-<!--          {% if valrun.is_archived %}-->
-<!--          <button class="btn btn-sm btn-primary" title="Un-archive" onclick="ajax_archive_result('{{ valrun.id }}', false)"><span class="fas fa-calendar-alt"></span> Un-archive</button>-->
-<!--          {% else %}-->
-<!--          <button class="btn btn-sm btn-primary" title="Extend lifespan" onclick="ajax_extend_result('{{ valrun.id }}', true)"><span class="fas fa-calendar-plus"></span> Renew</button>-->
-<!--          <button class="btn btn-sm btn-primary" title="Archive" onclick="ajax_archive_result('{{ valrun.id }}', true)"><span class="fas fa-archive"></span> Archive</button>-->
-<!--          {% endif %}-->
-<!--          {% if valrun.output_file %}-->
-<!--          <button type="button" title="Publish on Zenodo" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#publishDialog">-->
-<!--            <span class="fas fa-book" ></span> Publish-->
-<!--          </button>-->
-<!--          {% endif %}-->
-<!--        </div>-->
-<!--        {% if valrun.output_file %}-->
-<!--        <div class="publishingNote small text-muted {% if not val.publishing_in_progress %} collapse {% endif %}" style="float: right">-->
-<!--          <div class="spinner-border spinner-border-sm" role="status"><span class="sr-only">Publishing in progress...</span></div>-->
-<!--          Publishing in progress...-->
-<!--        </div>-->
-<!--        {% endif %}-->
-<!--        {% endif %}-->
