--- a/UI/src/app/modules/validation-result/components/tracked-validations/tracked-validations.component.scss
+++ b/UI/src/app/modules/validation-result/components/tracked-validations/tracked-validations.component.scss
@@ -1,16 +1,16 @@
-@import "~bootstrap/dist/css/bootstrap.css";
 @import "../buttons/buttons.component.scss";
+@import "src/styles";
 .att_val_container{
   background-color: white;
   color: black;
   padding: 0.3em 0.3em 0.3em 0.3em;
+  border-bottom: #dddddd solid 1px;
+  margin: 0;
 }
-.att_val_container h5.my-0{
+.att_val_container h5{
+  text-align: left;
   float: left;
   padding-top: 0.3em;
-}
-.att_val_container div.col-sm span{
-  text-align: right;
 }
 .buttons{
   position: relative;
