bootstrap replaced by global styling css

--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -56,7 +56,7 @@
       </span>
       <span *ngIf="!validationRun.is_unpublished; else elseUnpublished"
             class="p-my-0 font-weight-normal">{{validationRun.name_tag}}
-        <span class="pi pi-question-circle"
+        <span class="pi pi-question-circle help-icon"
               title="Validation has been published. There is no possibility of changing its name.">
         </span>
       </span>
@@ -123,7 +123,7 @@
       </span>
     </div>
     <!-- Status / Created   -->
-    <div class="p-col status p-pl-2 p-ml-3">
+    <div class="p-col status pl-2 p-ml-3">
       <!--    PUBLISHED -->
       <div *ngIf="published">
         <strong>Created:</strong><br/>
