--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
@@ -1,30 +1,31 @@
-<div class="p-grid no-gutters">
+<div class="p-grid p-mx-0">
       <div class="p-col-12">
         <p-panel [toggleable]="true" [collapsed]="true">
           <ng-template pTemplate="header">
-            <div class="text-center my-1" style="width: 92%">
-              <h4 class="my-0 font-weight-normal">Summary statistics</h4>
+            <div class="text-center p-my-1" style="width: 92%">
+              <h4 class="p-my-0 font-weight-normal">Summary statistics</h4>
             </div>
           </ng-template>
           <ng-template pTemplate="icons">
-            <label class="mb-0" pTooltip="Expand this section to inspect a table of statistics of the validation results."
+            <label class="p-mb-0" pTooltip="Expand this section to inspect a table of statistics of the validation results."
                    tooltipPosition="bottom">
               <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
             </label>
           </ng-template>
-          <div class="pb-3">The mean, median and standard deviation are calculated on the validation results aggregated by metric
+          <div class="p-pb-3">The mean, median and standard deviation are calculated on the validation results aggregated by metric
             and dataset. The reference dataset used is {{ (refDataset$ | async)?.pretty_name }}
             ({{ (refDatasetVersion$ | async)?.pretty_name }}, {{ (refDatasetVariable$ | async)?.pretty_name }}).
           </div>
-          <div *ngIf="(table$|async) as table" class="pb-3">
+          <div *ngIf="(table$|async) as table" class="p-pb-3">
           <span [innerHtml]="table | dompurify"></span>
           <div class="d-flex justify-content-between align-items-center">
-            <button type="button"
-                    style="width: 12rem;"
-                    class="btn btn-sm btn-primary"
+            <button pButton
+                    type="button"
+                    icon="pi pi-download"
+                    label="Download .csv table"
+                    class="btn-action-large"
                     title="Download the table to a .csv file"
                     (click)="getSummaryStatisticsAsCsv()">
-              <span class="pi pi-download"></span> Download .csv table
             </button>
           </div>
           </div>
