--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.scss
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.scss
@@ -1,12 +1,9 @@
-@import "~bootstrap/dist/css/bootstrap.css";
 @import "../buttons/buttons.component.scss";
+@import "src/styles";
 
 .dataframe thead th{
   text-align: center;
 }
 .dataframe td:first-child{
   font-weight: bold;
-}
-.help-icon{
-  font-size: 1.1rem;
 }
