--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -3838,9 +3838,8 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
   color: #ffffff;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
-  height: 3.2rem;
+  min-height: 3.2rem;
   font-size: 1.4rem;
-
 }
 
 .p-panel .p-panel-header .p-panel-title {
@@ -6031,6 +6030,11 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
 
 .validation-row .p-panel .p-panel-header{
   font-size: 1.5rem;
+  text-align: left;
+}
+
+.validation-row .p-panel .p-panel-header .p-panel-icons{
+  max-width: 30rem;
   text-align: right;
 }
 
